# Design-Patterns

./: .gitignore
cpp/: AbstractFactoryMethod.cpp  Adapter_pattern.cpp  CMakeLists.txt  Decorator_pattern.cpp  FactoryMethod_pattern.cpp  Observer_pattern.cpp  Singleton_pattern.cpp  Strategy_pattern.cpp
python/: Singleton_pattern.py
